--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -73,5 +73,5 @@ dependencies {
     implementation 'com.google.ar.sceneform:core:1.8.0'
     implementation 'com.google.ar:core:1.37.0'
     implementation platform('com.google.firebase:firebase-bom:32.0.0')
-    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-analytics'
 }
