--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   flutter_staggered_grid_view: ^0.6.2
   esys_flutter_share_plus: ^2.2.0
   cloud_firestore: ^4.7.0
+  firebase_database: ^10.2.1
+  firebase_core: ^2.13.0
+  firebase_storage: ^11.2.1
 
 dev_dependencies:
   flutter_test:
