--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   firebase_database: ^10.2.1
   firebase_core: ^2.13.0
   firebase_storage: ^11.2.1
+  loading_animation_widget: ^1.2.0+4
 
 dev_dependencies:
   flutter_test:
