--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,8 +44,8 @@ dependencies:
   get: ^4.6.5
   iconly: ^1.0.1
   readmore: ^2.0.1
-  webview_flutter: ^2.8.0
-  babylonjs_viewer: ^1.2.1
+  webview_flutter: ^3.0.4
+  # babylonjs_viewer: ^1.2.1
   google_fonts: ^4.0.3
   flutter_staggered_grid_view: ^0.6.2
   esys_flutter_share_plus: ^2.2.0
@@ -54,6 +54,7 @@ dependencies:
   firebase_core: ^2.13.0
   firebase_storage: ^11.2.1
   loading_animation_widget: ^1.2.0+4
+  model_viewer_plus: ^1.5.0
 
 dev_dependencies:
   flutter_test:
